# dnserver

./: .gitmodules  CMakeLists.txt  DNSServer.c  DNSServer.h  README.md  ThreadPool.c  ThreadPool.h  main.c
zones/: notresolve.zone  redirect.conf  template.zone
